fix styling issues

--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,10 @@
 <header class="site-header">
   <div class="container header-inner">
     <div class="header-left">
-      <h1 class="logo">Krave</h1>
-      <p class="tagline">From 2 Moms to World</p>
+      <a href="index.html" class="logo-link">
+        <h1 class="logo">Krave</h1>
+        <p class="tagline">From 2 Moms to World</p>
+      </a>
     </div>
     <button class="hamburger" aria-label="Menu" aria-expanded="false">
       <span></span>
