updated to remove OM reference

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="container">
-    <p>&copy; <span id="year"></span> Krave &middot; In partnership with Organic Mandya</p>
+    <p>&copy; <span id="year"></span> Krave &middot;</p>
   </div>
   <script>
     // Auto-update copyright year
